--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint": "^7.21.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
-    "tmp-promise": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
@@ -35,6 +34,7 @@
   "dependencies": {
     "uuid": "^8.3.2",
     "yaml": "^1.10.0",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+    "tmp-promise": "^3.0.2"
   }
 }
