--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retree-cli",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "./lib/index.js",
   "bin": {
     "retree": "./lib/index.js"
@@ -32,9 +32,9 @@
     "prepublish": "yarn test && yarn build"
   },
   "dependencies": {
+    "tmp-promise": "^3.0.2",
     "uuid": "^8.3.2",
     "yaml": "^1.10.0",
-    "yargs": "^16.2.0",
-    "tmp-promise": "^3.0.2"
+    "yargs": "^16.2.0"
   }
 }
